more consistent naming; was seeing some collapse, block display should fix (I think)

--- a/www-prototype/src/app.less
+++ b/www-prototype/src/app.less
@@ -200,7 +200,7 @@ body {
           }
         }
 
-        tag-details {
+        tag-notes {
           display: flex;
           flex-direction: column;
 
@@ -223,6 +223,8 @@ body {
             word-break: break-word;
 
             selection {
+              display: block;
+
               background-color: #fff;
             }
 
